--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .header-container {
   background-color: white;
   height: 6em;
-  box-shadow: 0em 0em 0.1em 0.1em #ccc;
+  box-shadow: 0em 0em 0.1em 0em #ccc;
   display: flex;
   justify-content: space-between;
 }
@@ -40,4 +40,29 @@
 .header-right-section {
   display: flex;
   align-items: center;
+}
+.navigation {
+  height: auto;
+  border-bottom: groove 0.1em #eee;
+  border-top: groove 0.1em #eee;
+  display: flex;
+  /* flex-direction: row; */
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+}
+
+li {
+  display:flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  margin: 0em 0.5em 0em 0.5em;
 }
