Adjusted background colours for the header nac and app

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -5,6 +5,8 @@
   border-top: groove 0.1em #eee;
   display: flex;
   /* flex-direction: row; */
+  margin-bottom: 1em;
+  background-color: whitesmoke;
 }
 
 ul {
