--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header-container {
-  background-color: white;
+  background-color: whitesmoke;
   height: 6em;
   box-shadow: 0em 0em 0.1em 0em #ccc;
   display: flex;
@@ -22,8 +22,9 @@
 }
 
 #search-icon {
+  background-color: white;
   padding: 0.75em;
-  border: solid 0.1em #eee;
+  border: solid 0.1em darkgrey;
   border-radius: 0.3em;
 }
 
