--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -22,17 +22,25 @@ ul {
 li {
   display:flex;
   flex-direction: column;
-  /* justify-content: center; */
+  justify-content: space-around;
   align-items: center;
   margin: 0em 0.5em 0em 0.5em;
 }
 
-/* ul > li {
+ul > li {
   flex: 10%
-} */
+}
 
 .nav-title {
   font-size: small;
+  text-align: center;
   font-family: Roboto, sans-serif;
   letter-spacing: 2px;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .nav-title {
+    font-size: xx-small;
+  }
 }
