--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,7 +2,7 @@
   margin: 1em;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 }
 
 .card {
@@ -11,8 +11,9 @@
   flex-direction: column;
   justify-content: space-between;
   width: 23em;
+  height: 22em;
   padding: 1em;
-  margin: 0em 1.5em 1em 1.5em;
+  margin: 0em auto 1em auto;
   background-color: whitesmoke;
 }
 
