--- a/src/components/CategoryButton.css
+++ b/src/components/CategoryButton.css
@@ -1,7 +1,9 @@
 .category {
   text-align: center;
+  color: whitesmoke;
   align-items: center;
-  border: solid 2px black;
+  /* border: solid 2px rgb(131, 204, 112); */
+  background-color: rgb(84, 160, 14);
   width: 6em;
   padding: 1em;
   margin: 0em 0.5em;
