--- a/src/components/CategoryButton.css
+++ b/src/components/CategoryButton.css
@@ -1,12 +1,12 @@
 .category {
   text-align: center;
-  color: rgb(84, 160, 14);
+  color: rgb(13, 100, 42);
   align-items: center;
   background-color: whitesmoke;
   width: 6em;
   padding: 1em;
-  margin: 0em 0.5em;
-  border-radius: 0.5em;
+  /* margin: 0em 0.5em; */
+  /* border-radius: 0.5em; */
 }
 
 .category:hover{
@@ -16,13 +16,18 @@
   background-color: rgb(13, 100, 42);
   width: 6em;
   padding: 1em;
-  margin: 0em 0.5em;
-  border-radius: 0.5em;
+  /* margin: 0em 0.5em; */
+  /* border-radius: 0.5em; */
 }
 
 .category-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  background-color: whitesmoke;
+  padding: 1em 0em;
+  margin: 0;
+  letter-spacing: 0.3em;
+  font-weight: 700;
 }
 
 .category--selected {
@@ -32,6 +37,11 @@
   align-items: center;
   width: 6em;
   padding: 1em;
-  margin: 0em 0.5em;
-  border-radius: 0.5em;
+  /* margin: 0em 0.5em; */
+  /* border-radius: 0.5em; */
+}
+
+.category-container > a {
+  max-width: 15em;
+  flex: 1;
 }
