--- a/src/components/Filter.css
+++ b/src/components/Filter.css
@@ -9,6 +9,7 @@
 
 form {
   display: flex;
+  background-color: whitesmoke;
 }
 
 select {
@@ -29,4 +30,11 @@ form > div {
   border: solid 1px rgb(13, 100, 42);
   border-radius: 0.5em;
   background-color: whitesmoke;
+}
+
+hr {
+  height: auto;
+  color: green;
+  background-color: darkgrey;
+  border: solid 1px darkgrey;
 }
