--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,8 +16,8 @@
   -webkit-appearance: none;
   font-size: 1em;
   border-radius: 0.3em;
-  border-style: groove;
-  border-color: #eee;
+  border-style: solid;
+  border-color: darkgrey;
   height: 100%;
 }
 
