--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,9 +5,11 @@
   border-radius: 0;
   padding: 0.5em;
   font-size: 1em;
+  border-style: outset;
 }
 
 .button:hover {
   box-shadow: 0 2px 5px 2px #23222233;
   cursor: pointer;
+  border-style: inset;
 }
