--- a/src/components/CategoryButton.css
+++ b/src/components/CategoryButton.css
@@ -5,8 +5,8 @@
   background-color: whitesmoke;
   width: 6em;
   padding: 1em;
-  /* margin: 0em 0.5em; */
-  /* border-radius: 0.5em; */
+  display: flex;
+  justify-content: center;
   border: solid;
 }
 
@@ -31,15 +31,9 @@
   font-weight: 700;
 }
 
-.category--selected {
+.category.category--selected {
   color: whitesmoke;
   background-color: rgb(13, 100, 42);
-  text-align: center;
-  align-items: center;
-  width: 6em;
-  padding: 1em;
-  /* margin: 0em 0.5em; */
-  /* border-radius: 0.5em; */
 }
 
 .category-container > a {
