--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -42,3 +42,13 @@
   background-color: rgb(35, 73, 9);
   color: whitesmoke;
 }
+
+.description {
+  color: darkslategray;
+}
+
+.title {
+  font-weight: 700;
+  color: darkgreen;
+  padding: 1em 0em;
+}
