--- a/src/components/CardDetails.css
+++ b/src/components/CardDetails.css
@@ -8,27 +8,25 @@
   box-shadow:  0 2px 5px #23222233;
   margin: 0em 2em;
   width: 83em;
+  padding: 1.5em
 }
 
-.top-section * {
-  margin: 0em 0.5em 0.5em;
-}
 .top-section-header {
   display: flex;
   justify-content: space-between;
-  /* margin: 0.5em; */
 }
 
 #card-details-title {
   font-size: 1.7em;
-  margin: 1em;
+  display: flex;
+  align-items: center;
+  padding: 0em;
 }
 
 .status {
   display: flex;
   align-items: center;
   height: fit-content;
-  margin: 1em;
   padding: 1em;
 }
 .status.open {
@@ -41,9 +39,11 @@
 
 .top-section-body {
   display: flex;
+  padding: 1em 0em;
 }
 .cover-photo {
   width: 100%;
+  padding-right: 1em;
 }
 #cover-photo {
   width: 100%;
