--- a/src/components/Category_Button.css
+++ b/src/components/Category_Button.css
@@ -8,6 +8,15 @@
   padding: 1em;
   display: flex;
   justify-content: center;
+
+
+  /* border: solid 1px rgb(13, 100, 42);
+  padding: 0.5em 2em;
+  color: rgb(13, 100, 42);
+  background-color: whitesmoke;
+  cursor: pointer;
+  border: 0;
+  font-size: 1.5em; */
 }
 
 .category :hover{
@@ -23,6 +32,7 @@
   margin: 0;
   letter-spacing: 0.3em;
   font-weight: 700;
+  border-bottom: solid 1px darkgrey;
 }
 
 .category-container {
